修改登陆组名称
